Fix edit comment attachments so only upload button is right-aligned, existing attachments are unchanged

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -1008,7 +1008,7 @@ input.radioBox_colored {
 	align-items: baseline;
   }
 
-  .et2_file.et2_vfs {
+  .et2_file.et2_vfs:first-of-type {
 	align-self: end;
 
 	et2-button.et2_file_span::part(base) {
